5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1593_1802.log
== TEST (2019-04-03 14:40:04) 
-- CODE:
from math import*
t=float(input("tempo: ")
l=g(t/2*pi)**2
-- ERROR:
File "XXXX", line 3
    l=g(t/2*pi)**2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:40:13) 
-- CODE:
from math import*
t=float(input("tempo: ")
l=g*(t/2*pi)**2
-- ERROR:
File "XXXX", line 3
    l=g*(t/2*pi)**2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:40:33) 
-- CODE:
from math import*
t=float(input("tempo: ")
l = g*(t/2*pi)**2
		  print(l)
-- ERROR:
File "XXXX", line 3
    l = g*(t/2*pi)**2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:41:03) 
-- CODE:
from math import*
t = float(input("tempo: ")
			 g=9.81
l = g*(t/2*pi)**2
		  print(l)
-- ERROR:
File "XXXX", line 3
    g=9.81
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:41:12) 
-- CODE:
from math import*
t = float(input("tempo: ")
g=9.81
l = g*(t/2*pi)**2
		  print(l)
-- ERROR:
File "XXXX", line 3
    g=9.81
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:41:22) 
-- CODE:
from math import*
t = float(input("tempo: ")
g=9,81
l = g*(t/2*pi)**2
		  print(l)
-- ERROR:
File "XXXX", line 3
    g=9,81
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:41:34) 
-- CODE:
from math import*
t = float(input("tempo: ")
g = 9.81
l = g*(t/2*pi)**2
		  print(l)
-- ERROR:
File "XXXX", line 3
    g = 9.81
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:42:18) 
-- CODE:
from math import*
t = float(input("tempo: ")
g = 9.81
l = g  *(t /2* pi)**2
print(l)
-- ERROR:
File "XXXX", line 3
    g = 9.81
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:42:19) 
-- CODE:
from math import*
t = float(input("tempo: ")
g = 9.81
l = g  *(t /2* pi)**2
print(l)
-- ERROR:
File "XXXX", line 3
    g = 9.81
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:42:21) 
-- CODE:
from math import*
t = float(input("tempo: ")
g = 9.81
l = g  *(t /2* pi)**2
print(l)
-- ERROR:
File "XXXX", line 3
    g = 9.81
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:42:27) 
-- CODE:
from math import*
t = float(input("tempo: ")
f = 9.81
l = g  *(t /2* pi)**2
print(l)
-- ERROR:
File "XXXX", line 3
    f = 9.81
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:42:41) 
-- CODE:
from math import*
t = float(input("tempo: ")
g= 9.81
l = g  *(t /2* pi)**2
print(l)
-- ERROR:
File "XXXX", line 3
    g= 9.81
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:49:58) 
-- CODE:
from math import*
n = float(input("pontos de vida iniciais: ")
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))
dano = ((5*d1)**1/2) + (pi**d2/3)
			 
-- ERROR:
File "XXXX", line 3
    d1 = int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:50:56) 
-- CODE:
from math import*
n = float(input("pontos de vida iniciais: ")
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))
dano = ((5*d1)**1/2) + (pi**d2/3)
print(int(dano))
			 
-- ERROR:
File "XXXX", line 3
    d1 = int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 14:52:30) 
-- CODE:
from math import*
n = float(input("pontos de vida iniciais: ")
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))
dano = ((5*d1)**1/2) + (pi**d2/3)
print(int(dano))
			 
-- EXECUTION TIME:
0.13613
-- ERROR:
  File "/home/codebench/codes/1593/1802/main.py", line 3
    d1 = int(input())
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:52:32) 
-- CODE:
from math import*
n = float(input("pontos de vida iniciais: ")
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))
dano = ((5*d1)**1/2) + (pi**d2/3)
print(int(dano))
			 
-- ERROR:
File "XXXX", line 3
    d1 = int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 14:53:41) 
-- CODE:
from math import*
n = float(input("pontos de vida iniciais: ")
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))
dano = ((5*d1)**1/2) + (pi**d2/3)
print(int(dano))
			 
-- EXECUTION TIME:
0.212101
-- ERROR:
  File "/home/codebench/codes/1593/1802/main.py", line 3
    d1 = int(input())
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:53:41) 
-- CODE:
from math import*
n = float(input("pontos de vida iniciais: ")
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))
dano = ((5*d1)**1/2) + (pi**d2/3)
print(int(dano))
			 
-- ERROR:
File "XXXX", line 3
    d1 = int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:53:47) 
-- CODE:
from math import*
n = float(input("pontos de vida iniciais: ")
d1 = int(input("dado1:"))
d2 = int(input("dado2: "))
dano = ((5*d1)**1/2) + (pi**d2/3)
print(int(dano))
			 
-- ERROR:
File "XXXX", line 3
    d1 = int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:53:52) 
-- CODE:
from math import*
n = float(input("pontos de vida iniciais: ")
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))
dano = ((5*d1)**1/2) + (pi**d2/3)
print(int(dano))
			 
-- ERROR:
File "XXXX", line 3
    d1 = int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:53:53) 
-- CODE:
from math import*
n = float(input("pontos de vida iniciais: ")
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))
dano = ((5*d1)**1/2) + (pi**d2/3)
print(int(dano))
			 
-- ERROR:
File "XXXX", line 3
    d1 = int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:53:53) 
-- CODE:
from math import*
n = float(input("pontos de vida iniciais: ")
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))
dano = ((5*d1)**1/2) + (pi**d2/3)
print(int(dano))
			 
-- ERROR:
File "XXXX", line 3
    d1 = int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:53:53) 
-- CODE:
from math import*
n = float(input("pontos de vida iniciais: ")
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))
dano = ((5*d1)**1/2) + (pi**d2/3)
print(int(dano))
			 
-- ERROR:
File "XXXX", line 3
    d1 = int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:53:54) 
-- CODE:
from math import*
n = float(input("pontos de vida iniciais: ")
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))
dano = ((5*d1)**1/2) + (pi**d2/3)
print(int(dano))
			 
-- ERROR:
File "XXXX", line 3
    d1 = int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:53:54) 
-- CODE:
from math import*
n = float(input("pontos de vida iniciais: ")
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))
dano = ((5*d1)**1/2) + (pi**d2/3)
print(int(dano))
			 
-- ERROR:
File "XXXX", line 3
    d1 = int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:53:54) 
-- CODE:
from math import*
n = float(input("pontos de vida iniciais: ")
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))
dano = ((5*d1)**1/2) + (pi**d2/3)
print(int(dano))
			 
-- ERROR:
File "XXXX", line 3
    d1 = int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 10:08:38) 
-- CODE:
from math import*
n = float(input("pontos de vida iniciais: ")
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))
dano = ((5*d1)**1/2) + (pi**d2/3)
print(int(dano))
			 
-- ERROR:
File "XXXX", line 3
    d1 = int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 10:08:51) 
-- CODE:
from math import*
n = float(input("pontos de vida iniciais: ")
d1 = float(input("dado1: "))
d2 = float(input("dado2: "))
dano = ((5*d1)**1/2) + (pi**d2/3)
print(int(dano))
			 
-- ERROR:
File "XXXX", line 3
    d1 = float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 10:05:23) 
-- CODE:
from math import*
n = float(input("pontos de vida iniciais: ")
d1 = float(input("dado1: "))
d2 = float(input("dado2: "))
dano = ((5*d1)**1/2) + (pi**d2/3)
print(int(dano))
			 
-- ERROR:
File "XXXX", line 3
    d1 = float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 10:05:54) 
-- CODE:
from math import*
n = float(input("pontos de vida iniciais: ")
d1 = float(input("dado1: "))
d2 = float(input("dado2: "))
dano = ((5*d1)**1/2) + (pi**d2/3)
print(int(dano))
			 
-- ERROR:
File "XXXX", line 3
    d1 = float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 10:05:54) 
-- CODE:
from math import*
n = float(input("pontos de vida iniciais: ")
d1 = float(input("dado1: "))
d2 = float(input("dado2: "))
dano = ((5*d1)**1/2) + (pi**d2/3)
print(int(dano))
			 
-- ERROR:
File "XXXX", line 3
    d1 = float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 10:06:41) 
-- CODE:
from math import*
n = float(input("pontos de vida iniciais: ")
d1 = float(input("dado1: "))
d2 = float(input("dado2: "))
dano = (sqrt(5*d1)**1/2) + (pi**d2/3)
print(int(dano))
			 
-- ERROR:
File "XXXX", line 3
    d1 = float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 10:07:03) 
-- CODE:
from math import*
n = float(input("pontos de vida iniciais: ")
d1= float(input("dado 1:"))
d2 = float(input("dado2: "))
dano = (sqrt(5*d1)**1/2) + (pi**d2/3)
print(int(dano))
			 
-- ERROR:
File "XXXX", line 3
    d1= float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 10:07:36) 
-- CODE:
from math import*
n = float(input("pontos de vida iniciais: ")
d1= int(input("dado 1:"))
d2 = float(input("dado2: "))
dano = (sqrt(5*d1)**1/2) + (pi**d2/3)
print(int(dano))
			 
-- ERROR:
File "XXXX", line 3
    d1= int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
